--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body
 {
   background-image: radial-gradient(#1e90ff,#00bfff,#87cefa);
+  font-family: serif;
 }
 
 header
@@ -13,6 +14,12 @@ header h4
 {
   padding-left: 140px;
   margin-top: -25px;
+  font-family: cursive;
+}
+
+header h1
+{
+  font-family: cursive;
 }
 
 footer
@@ -75,6 +82,7 @@ main
   margin-right: auto;
   background-color: #f5deb3;
   background-repeat: no-repeat;
+  box-shadow: 6px,6px,6px #ffffff;
 }
 
 #wrapper h3
@@ -92,6 +100,11 @@ wrapper a:visited
   color: #800080;
 }
 
+table
+{
+  border-collapse: collapse;
+}
+
 table,th,td
 {
   border: 1px solid black;
@@ -100,4 +113,9 @@ caption
 {
   font-weight: bold;
   text-decoration: underline;
+}
+
+dt
+{
+  font-weight: bold;
 }
