--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,11 @@
+body{
+    font-family: 'Karla', sans-serif !important;
+}
+
+h1,h2,h3,h4,h5,h6{
+    font-family: 'Rubik', sans-serif !important;
+}
+
 #profile-photo{
     border-radius: 50%;
 }
