--- a/assets/css/freelancer.css
+++ b/assets/css/freelancer.css
@@ -9782,7 +9782,7 @@ a.text-dark:hover, a.text-dark:focus {
   top: 1rem;
   font-size: 3rem;
   line-height: 3rem;
-  color: #1abc9c;
+  color: #2C3E50;
   opacity: 1;
 }
 
