restored min version of JS

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,9 +1,9 @@
 body{
-    font-family: 'Karla', sans-serif !important;
+    font-family: 'Karla', sans-serif;
 }
 
 h1,h2,h3,h4,h5,h6{
-    font-family: 'Rubik', sans-serif !important;
+    font-family: 'Rubik', sans-serif;
 }
 
 #profile-photo{
