--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,6 +6,25 @@ h1,h2,h3,h4,h5,h6{
     font-family: 'Rubik', sans-serif;
 }
 
+label{
+    color: white !important;
+}
+
+.form-control{
+    background-color: white !important;
+}
+
 #profile-photo{
     border-radius: 50%;
 }
+
+#sendMessageButton:hover{
+    background-color: #1A252F !important;
+    border-color: #1A252F !important;
+
+}
+
+#thank-you-text{
+    text-align: center;
+}
+
