--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -19,6 +19,11 @@ label {
     background-color: white !important;
 }
 
+#email-link:hover{
+    color: orangered;
+    font-weight: bold;
+}
+
 #profile-photo {
     border-radius: 50%;
 }
